--- a/BlazorTool.Client/_Imports.razor
+++ b/BlazorTool.Client/_Imports.razor
@@ -11,4 +11,6 @@
 @using Telerik.SvgIcons
 @using Telerik.DataSource
 @using Telerik.DataSource.Extensions
+@using Microsoft.Extensions.Localization
+
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
