--- a/BlazorTool.Client/Components/ActivityDisplay.razor
+++ b/BlazorTool.Client/Components/ActivityDisplay.razor
@@ -1,14 +1,15 @@
 @using BlazorTool.Client.Models
+@inject IStringLocalizer<Resources.UIStrings> Localizer
 
 @if (ActivityItem != null)
 {
     <div class="activity-row">
-        <span class="activity-category" title="Category">@ActivityItem.ActCategory</span>
-        <span class="activity-description" title="Description">@ActivityItem.Description</span>
-        <span class="activity-workload" title="Work Load">@ActivityItem.WorkLoad.ToString("F2") h</span>
-        <span class="activity-workers" title="Workers">@ActivityItem.Workers worker(s)</span>
-        <span class="activity-persons" title="Assigned Persons">@String.Join(',', Persons?.Select(p => p.Name).ToList() ?? new List<string>())</span>
-        <span class="activity-date" title="Date Added">@ActivityItem.AddDate.ToString("dd.MM.yyyy HH:mm")</span>
+        <span class="activity-category" title="@Localizer["ActivityDisplay_Category"]">@ActivityItem.ActCategory</span>
+        <span class="activity-description" title="@Localizer["ActivityDisplay_Description"]">@ActivityItem.Description</span>
+        <span class="activity-workload" title="@Localizer["ActivityDisplay_WorkLoad"]">@ActivityItem.WorkLoad.ToString("F2") @Localizer["ActivityDisplay_HoursAbbreviation"]</span>
+        <span class="activity-workers" title="@Localizer["ActivityDisplay_Workers"]">@ActivityItem.Workers @Localizer["ActivityDisplay_WorkersCount"]</span>
+        <span class="activity-persons" title="@Localizer["ActivityDisplay_AssignedPersons"]">@String.Join(',', Persons?.Select(p => p.Name).ToList() ?? new List<string>())</span>
+        <span class="activity-date" title="@Localizer["ActivityDisplay_DateAdded"]">@ActivityItem.AddDate.ToString("dd.MM.yyyy HH:mm")</span>
     </div>
 }
 
