--- a/BlazorTool.Client/Pages/OrdersPage.razor
+++ b/BlazorTool.Client/Pages/OrdersPage.razor
@@ -11,14 +11,15 @@
 @inject NavigationManager Navigation
 @inject BlazorTool.Client.Services.ApiServiceClient apiService
 @inject UserState UserState
+@inject IStringLocalizer<Resources.UIStrings> Localizer
+
 @rowStyles
 <CheckSession apiService="@apiService" UserState="@UserState" />
-<label>Devices:</label>
+<label>@Localizer["OrdersPage_Devices"]</label>
 
 @if (isDevicesLoading)
 {
-    <TelerikLoaderContainer Visible="@isDevicesLoading" Text="Loading devices list...">
-    </TelerikLoaderContainer>
+    <TelerikLoaderContainer Visible="@isDevicesLoading" Text="@Localizer["OrdersPage_LoadingDevicesList"]"></TelerikLoaderContainer>
 }else
 {    
 <div class="filter-controls-row">
@@ -31,7 +32,7 @@
             </TelerikRadioGroup>
             <TelerikButton OnClick="@selectAllDevices"
                             ThemeColor="@ThemeConstants.Button.ThemeColor.Base">
-                Select All
+                @Localizer["OrdersPage_SelectAll"]
             </TelerikButton>
 
         <TelerikMultiSelect Data="@devices"
@@ -40,7 +41,7 @@
                             TextField="@nameof(Device.AssetNo)"
                             TagMode="@TagMode"
                             MaxAllowedTags="@MaxAllowedTags"
-                            Placeholder="Select devices"
+                            Placeholder="@Localizer["OrdersPage_SelectDevices"]"
                             AutoClose="false"
                                 OnClose="@OnMultiValueClosed"
                             Width="500px"
@@ -48,10 +49,10 @@
         </TelerikMultiSelect>
     </div>
     <div>
-        <label>Device category</label>
+        <label>@Localizer["OrdersPage_DeviceCategory"]</label>
         <TelerikComboBox Data="@deviceCategories" TextField="DeviceCategory"
                             @bind-Value="@selectedDeviceCategory"
-                            Placeholder="Select category..." ShowClearButton="true" Filterable="true"
+                            Placeholder="@Localizer["OrdersPage_SelectCategory"]" ShowClearButton="true" Filterable="true"
                             OnChange="@OnCategoryChanged"
         >
         </TelerikComboBox>
@@ -88,10 +89,10 @@
 </div>
 }
 
-<h3>Orders (@OrderDevicesForGrid.Count)</h3>
+<h3>@Localizer["OrdersPage_Orders"] (@OrderDevicesForGrid.Count)</h3>
 @if (isOrdersLoading)
 {
-    <div>loading order list...</div>
+    <div>@Localizer["OrdersPage_LoadingOrderList"]</div>
 }
 else
 {
@@ -111,9 +112,9 @@ else
             <GridSearchBox Width="200px"/>
         </GridToolBarTemplate>
         <GridColumns>
-            <GridColumn Field="@nameof(WorkOrderView.WorkOrderID)" Title="ID" Width="4rem" Filterable="false" Editable="false" Visible="true"></GridColumn>
-            <GridColumn Field="@nameof(WorkOrderView.WODesc)" Editable="false" Visible="false"></GridColumn>
-            <GridColumn Field="@nameof(WorkOrderView.DepName)" Title="DepName" Width="8rem" Resizable="true">
+            <GridColumn Field="@nameof(WorkOrderView.WorkOrderID)" Title="@Localizer[nameof(WorkOrder.WorkOrderID)]" Width="4rem" Filterable="false" Editable="false" Visible="true"></GridColumn>
+            <GridColumn Field="@nameof(WorkOrderView.WODesc)" Editable="false" Visible="false" Title="@Localizer[nameof(WorkOrder.WODesc)]"></GridColumn>
+            <GridColumn Field="@nameof(WorkOrderView.DepName)" Title="@Localizer[nameof(WorkOrder.DepName)]" Width="8rem" Resizable="true">
         <FilterMenuTemplate>
                     <CustomFilterMenuTemplate Values="@dicts.Where(d => d.ListType == (int)WOListTypeEnum.Department).Select(d => d.Name).Distinct()"
                                               context="@context"
@@ -121,9 +122,9 @@ else
                     </CustomFilterMenuTemplate>
         </FilterMenuTemplate>
     </GridColumn>
-            <GridColumn Field="@nameof(WorkOrderView.DeviceName)" Title="Device" Resizable="true" Filterable="false"></GridColumn>
-            <GridColumn Field="@nameof(WorkOrderView.DeviceCategory)" Resizable="true" Filterable="false"></GridColumn>
-            <GridColumn Field="@nameof(WorkOrderView.WOReason)" Resizable="true">
+            <GridColumn Field="@nameof(WorkOrderView.DeviceName)" Title="@Localizer[nameof(WorkOrderView.DeviceName)]" Resizable="true" Filterable="false"></GridColumn>
+            <GridColumn Field="@nameof(WorkOrderView.DeviceCategory)" Resizable="true" Filterable="false" Title="@Localizer[nameof(WorkOrderView.DeviceCategory)]"></GridColumn>
+            <GridColumn Field="@nameof(WorkOrderView.WOReason)" Resizable="true" Title="@Localizer[nameof(WorkOrderView.WOReason)]">
                 <FilterMenuTemplate>
                     <CustomFilterMenuTemplate Values="@dicts.Where(d => d.ListType == (int)WOListTypeEnum.Reason).Select(d => d.Name).Distinct()"
                                               context="@context"
@@ -131,7 +132,7 @@ else
                     </CustomFilterMenuTemplate>
                 </FilterMenuTemplate>
             </GridColumn>
-            <GridColumn Field="@nameof(WorkOrderView.ModPerson)" Resizable="true">
+            <GridColumn Field="@nameof(WorkOrderView.ModPerson)" Resizable="true" Title="@Localizer[nameof(WorkOrderView.ModPerson)]">
                 <FilterMenuTemplate>
                     <CustomFilterMenuTemplate Values="@allPersons.Select(x => x.Name).ToList()"
                                               context="@context"
@@ -139,7 +140,7 @@ else
                     </CustomFilterMenuTemplate>
                 </FilterMenuTemplate>
             </GridColumn>
-            <GridColumn Field="@nameof(WorkOrderView.AssignedPerson)" Resizable="true">
+            <GridColumn Field="@nameof(WorkOrderView.AssignedPerson)" Resizable="true" Title="@Localizer[nameof(WorkOrderView.AssignedPerson)]">
         <FilterMenuTemplate>
             <CustomFilterMenuTemplate Values="@allPersons.Select(x=>x.Name).ToList()"
                                       context="@context"
@@ -147,7 +148,7 @@ else
             </CustomFilterMenuTemplate>
         </FilterMenuTemplate>
     </GridColumn>
-            <GridColumn Field="@nameof(WorkOrderView.WOState)" Resizable="true">
+            <GridColumn Field="@nameof(WorkOrderView.WOState)" Resizable="true" Title="@Localizer[nameof(WorkOrderView.WOState)]">
         <FilterMenuTemplate>
                     <CustomFilterMenuTemplate Values="@workOrderStates"
                                       context="@context"
@@ -155,7 +156,7 @@ else
                     </CustomFilterMenuTemplate>
         </FilterMenuTemplate>
     </GridColumn>
-            <GridColumn Field="@nameof(WorkOrderView.WOLevel)" Width="45rm" Resizable="true">
+            <GridColumn Field="@nameof(WorkOrderView.WOLevel)" Width="45rm" Resizable="true" Title="@Localizer[nameof(WorkOrderView.WOLevel)]">
         <FilterMenuTemplate>
             <CustomFilterMenuTemplate Values="@dicts.Where(d => d.ListType == (int)WOListTypeEnum.Level).Select(d => d.Name).Distinct()"
                                       context="@context"
@@ -163,41 +164,41 @@ else
                     </CustomFilterMenuTemplate>
         </FilterMenuTemplate>
     </GridColumn>
-            <GridColumn Field="@nameof(WorkOrderView.AddDate)" DisplayFormat="{0:yyyy.MM.dd HH:mm}" Resizable="true">
+            <GridColumn Field="@nameof(WorkOrderView.AddDate)" DisplayFormat="{0:yyyy.MM.dd HH:mm}" Resizable="true" Title="@Localizer[nameof(WorkOrderView.AddDate)]">
                 <FilterMenuButtonsTemplate Context="filterContext">
                     <div class="vertical-stack-container">
 
                         <div class="stack-item">
-                            <TelerikButton ThemeColor="@ThemeConstants.Button.ThemeColor.Primary" OnClick="@(async _ => await filterContext.FilterAsync())">Filter </TelerikButton>
-                            <TelerikButton ThemeColor="@ThemeConstants.Button.ThemeColor.Info" OnClick="@(() => ClearFilterAsync(filterContext))">Clear</TelerikButton>
+                            <TelerikButton ThemeColor="@ThemeConstants.Button.ThemeColor.Primary" OnClick="@(async _ => await filterContext.FilterAsync())">@Localizer["OrdersPage_Filter"] </TelerikButton>
+                            <TelerikButton ThemeColor="@ThemeConstants.Button.ThemeColor.Info" OnClick="@(() => ClearFilterAsync(filterContext))">@Localizer["OrdersPage_Clear"]</TelerikButton>
                         </div>
                         <div class="stack-item">
-                            <TelerikButton OnClick="@(() => FilterByDateRange(filterContext, "AddDate", "year"))">Last Year</TelerikButton>
-                            <TelerikButton OnClick="@(() => FilterByDateRange(filterContext, "AddDate", "quarter"))">Quarter</TelerikButton>
-                            <TelerikButton OnClick="@(() => FilterByDateRange(filterContext, "AddDate", "month"))">Month</TelerikButton>
+                            <TelerikButton OnClick="@(() => FilterByDateRange(filterContext, "AddDate", "year"))">@Localizer["OrdersPage_LastYear"]</TelerikButton>
+                            <TelerikButton OnClick="@(() => FilterByDateRange(filterContext, "AddDate", "quarter"))">@Localizer["OrdersPage_Quarter"]</TelerikButton>
+                            <TelerikButton OnClick="@(() => FilterByDateRange(filterContext, "AddDate", "month"))">@Localizer["OrdersPage_Month"]</TelerikButton>
                         </div>
                     </div>
 
                 </FilterMenuButtonsTemplate>
     </GridColumn>
-            <GridColumn Field="@nameof(WorkOrderView.StartDate)" Title="Start Date" DisplayFormat="{0:yyyy.MM.dd HH:mm}" Resizable="true">
+            <GridColumn Field="@nameof(WorkOrderView.StartDate)" Title="@Localizer[nameof(WorkOrderView.StartDate)]" DisplayFormat="{0:yyyy.MM.dd HH:mm}" Resizable="true">
        <FilterMenuButtonsTemplate Context="filterContext">
            <div class="vertical-stack-container">
 
                         <div class="stack-item">
-                            <TelerikButton ThemeColor="@ThemeConstants.Button.ThemeColor.Primary" OnClick="@(async _ => await filterContext.FilterAsync())">Filter </TelerikButton>
-                            <TelerikButton ThemeColor="@ThemeConstants.Button.ThemeColor.Info" OnClick="@(() => ClearFilterAsync(filterContext))">Clear</TelerikButton>
+                            <TelerikButton ThemeColor="@ThemeConstants.Button.ThemeColor.Primary" OnClick="@(async _ => await filterContext.FilterAsync())">@Localizer["OrdersPage_Filter"] </TelerikButton>
+                            <TelerikButton ThemeColor="@ThemeConstants.Button.ThemeColor.Info" OnClick="@(() => ClearFilterAsync(filterContext))">@Localizer["OrdersPage_Clear"]</TelerikButton>
                     </div>
                         <div class="stack-item">
-                    <TelerikButton OnClick="@(() => FilterByDateRange(filterContext, "StartDate", "year"))">Last Year</TelerikButton>
-                    <TelerikButton OnClick="@(() => FilterByDateRange(filterContext, "StartDate", "quarter"))">Quarter</TelerikButton>
-                    <TelerikButton OnClick="@(() => FilterByDateRange(filterContext, "StartDate", "month"))">Month</TelerikButton>
+                    <TelerikButton OnClick="@(() => FilterByDateRange(filterContext, "StartDate", "year"))">@Localizer["OrdersPage_LastYear"]</TelerikButton>
+                    <TelerikButton OnClick="@(() => FilterByDateRange(filterContext, "StartDate", "quarter"))">@Localizer["OrdersPage_Quarter"]</TelerikButton>
+                    <TelerikButton OnClick="@(() => FilterByDateRange(filterContext, "StartDate", "month"))">@Localizer["OrdersPage_Month"]</TelerikButton>
                         </div>
                     </div>
         </FilterMenuButtonsTemplate>
     </GridColumn>
-            <GridColumn Field="@nameof(WorkOrderView.EndDate)" DisplayFormat="{0:yyyy.MM.dd HH:mm}" Resizable="true"></GridColumn>
-            <GridColumn Field="@nameof(WorkOrderView.CloseDate)" DisplayFormat="{0:yyyy.MM.dd HH:mm}" Visible="false" Resizable="true"></GridColumn>
+            <GridColumn Field="@nameof(WorkOrderView.EndDate)" DisplayFormat="{0:yyyy.MM.dd HH:mm}" Resizable="true" Title="@Localizer[nameof(WorkOrderView.EndDate)]"></GridColumn>
+            <GridColumn Field="@nameof(WorkOrderView.CloseDate)" DisplayFormat="{0:yyyy.MM.dd HH:mm}" Visible="false" Resizable="true" Title="@Localizer[nameof(WorkOrderView.CloseDate)]"></GridColumn>
         </GridColumns>
     </TelerikGrid>
 
@@ -212,7 +213,7 @@ else
              <WorkOrderComponent WorkOrder="@selectedOrder" isEditable=false currentUser="@currentUser"/>
         </WindowContent>
         <WindowActions>
-            <WindowAction Name="Close" />
+            <WindowAction Name="@Localizer["OrdersPage_Close"]" />
         </WindowActions>
         <WindowFooter>
         </WindowFooter>
